welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:3: error: reassignment to val
		case (x,y) if (x=y) => return true
                                ^