welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	(a%10,b%10) match {
		case (x,y) if (x=y) => return true
		case (x,y)		=> return false
	}
}